--- a/deq_tests.ipynb
+++ b/deq_tests.ipynb
@@ -1615,7 +1615,7 @@
    "outputs": [],
    "source": [
     "config_path = \"DEQBert/model_card/config.json\"\n",
-    "model_path = \"models/lucas-cont/checkpoint-60000\""
+    "model_path = \"models/lucas-cont-part3/checkpoint-5000\""
    ]
   },
   {
@@ -1632,12 +1632,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 899k/899k [00:03<00:00, 256kB/s] \n",
-      "C:\\Users\\weipy\\mambaforge\\envs\\deqbert\\lib\\site-packages\\huggingface_hub\\file_download.py:127: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\weipy\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Downloading: 100%|██████████| 456k/456k [00:02<00:00, 225kB/s]  \n",
-      "Downloading: 100%|██████████| 481/481 [00:00<00:00, 463kB/s]\n",
       "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
       "The tokenizer class you load from this checkpoint is 'RobertaTokenizer'. \n",
       "The class this function is called from is 'DEQBertTokenizer'.\n"
@@ -1657,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "c17ffedf",
    "metadata": {
     "pycharm": {
@@ -1667,16 +1661,187 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'score': 0.37471240758895874,\n  'token': 5,\n  'token_str': ' the',\n  'sequence': 'The nurse notified the patient that the shift would be ending in an hour..'},\n {'score': 0.1360352635383606,\n  'token': 10,\n  'token_str': ' a',\n  'sequence': 'The nurse notified the patient that a shift would be ending in an hour..'},\n {'score': 0.0531623512506485,\n  'token': 42,\n  'token_str': ' this',\n  'sequence': 'The nurse notified the patient that this shift would be ending in an hour..'},\n {'score': 0.04111242666840553,\n  'token': 18,\n  'token_str': \"'s\",\n  'sequence': \"The nurse notified the patient that's shift would be ending in an hour..\"},\n {'score': 0.013586561195552349,\n  'token': 74,\n  'token_str': ' would',\n  'sequence': 'The nurse notified the patient that would shift would be ending in an hour..'}]"
+      "text/plain": "[{'score': 0.0440390408039093,\n  'token': 4,\n  'token_str': '.',\n  'sequence': 'The capital of France is.'},\n {'score': 0.02579246461391449,\n  'token': 35,\n  'token_str': ':',\n  'sequence': 'The capital of France is:'},\n {'score': 0.02486201748251915,\n  'token': 1470,\n  'token_str': ' France',\n  'sequence': 'The capital of France is France'},\n {'score': 0.01926695741713047,\n  'token': 5,\n  'token_str': ' the',\n  'sequence': 'The capital of France is the'},\n {'score': 0.018622441217303276,\n  'token': 421,\n  'token_str': ' expected',\n  'sequence': 'The capital of France is expected'}]"
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fill_mask(\"The nurse notified the patient that <mask> shift would be ending in an hour..\")"
+    "fill_mask(\"The capital of France is <mask>\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## TEST"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import datasets\n",
+    "import wandb\n",
+    "from evaluate import load\n",
+    "from transformers import DataCollatorWithPadding, TrainingArguments, Trainer\n",
+    "\n",
+    "from DEQBert.modeling_deqbert import DEQBertForMaskedLM, DEQBertForSequenceClassification, DEQBertConfig\n",
+    "from DEQBert.tokenization_deqbert import DEQBertTokenizer"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'RobertaTokenizer'. \n",
+      "The class this function is called from is 'DEQBertTokenizer'.\n",
+      "Found cached dataset super_glue (C:/Users/weipy/.cache/huggingface/datasets/super_glue/boolq/1.0.3/bb9675f958ebfee0d5d6dc5476fafe38c79123727a7258d515c450873dbdbbed)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 300.63it/s]\n",
+      "100%|██████████| 9427/9427 [00:15<00:00, 589.90ex/s]\n",
+      "100%|██████████| 3270/3270 [00:05<00:00, 597.05ex/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialise the configs\n",
+    "config = DEQBertConfig.from_pretrained(config_path)\n",
+    "config.is_decoder = False\n",
+    "\n",
+    "# create tokenizer\n",
+    "tokenizer = DEQBertTokenizer.from_pretrained(\"roberta-base\")\n",
+    "\n",
+    "# download the task splits, removing unneeded index column\n",
+    "dataset = datasets.load_dataset('super_glue', 'boolq')\n",
+    "dataset = dataset.remove_columns('idx')\n",
+    "\n",
+    "# tokenize function will concatenate the inputs together with a separator token before tokenizing it.\n",
+    "def tokenize_function(example):\n",
+    "    s = []\n",
+    "    # each \"i\" is a column label\n",
+    "    for i in example:\n",
+    "        if i != 'label':\n",
+    "            s.append(example[i].strip())\n",
+    "    # have to end on SEP token, and each SEP token should have spacing between each sequence\n",
+    "    string = f\" {tokenizer.sep_token} \".join(s)\n",
+    "    return tokenizer(string, padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "# map across all splits of the dataset\n",
+    "train_dataset = dataset['train'].map(tokenize_function).with_format('torch')\n",
+    "valid_dataset = dataset['validation'].map(tokenize_function).with_format('torch')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'<s>is elder scrolls online the same as skyrim </s> The Elder Scrolls Online -- As with other games in The Elder Scrolls series, the game is set on the continent of Tamriel. The events of the game occur a millennium before those of The Elder Scrolls V: Skyrim and around 800 years before The Elder Scrolls III: Morrowind and The Elder Scrolls IV: Oblivion. It has a broadly similar structure to Skyrim, with two separate conflicts progressing at the same time, one with the fate of the world in the balance, and one where the prize is supreme power on Tamriel. In The Elder Scrolls Online, the first struggle is against the Daedric Prince Molag Bal, who is attempting to meld the plane of Mundus with his realm of Coldharbour, and the second is to capture the vacant imperial throne, contested by three alliances of the mortal races. The player character has been sacrificed to Molag Bal, and Molag Bal has stolen their soul, the recovery of which is the primary game objective.</s><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad>'"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(train_dataset[4]['input_ids'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "super_glue_metric = load('super_glue', 'boolq')\n",
+    "predictions = [0, 1]\n",
+    "references = [0, 1]\n",
+    "results = super_glue_metric.compute(predictions=predictions, references=references)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'accuracy': 1.0}"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\"<s>does ethanol take more energy make that produces </s> Ethanol fuel -- All biomass goes through at least some of these steps: it needs to be grown, collected, dried, fermented, distilled, and burned. All of these steps require resources and an infrastructure. The total amount of energy input into the process compared to the energy released by burning the resulting ethanol fuel is known as the energy balance (or ``energy returned on energy invested''). Figures compiled in a 2007 report by National Geographic Magazine point to modest results for corn ethanol produced in the US: one unit of fossil-fuel energy is required to create 1.3 energy units from the resulting ethanol. The energy balance for sugarcane ethanol produced in Brazil is more favorable, with one unit of fossil-fuel energy required to create 8 from the ethanol. Energy balance estimates are not easily produced, thus numerous such reports have been generated that are contradictory. For instance, a separate survey reports that production of ethanol from sugarcane, which requires a tropical climate to grow productively, returns from 8 to 9 units of energy for each unit expended, as compared to corn, which only returns about 1.34 units of fuel energy for each unit of energy expended. A 2006 University of California Berkeley study, after analyzing six separate studies, concluded that producing ethanol from corn uses much less petroleum than producing gasoline. </s></s>\""
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(valid_dataset[0]['input_ids'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
