Add push model to HuggingFace Hub
Should be as simple as running that cell. But the current updated
version we have of deqbert is not the same that the pretrained weights
are for. We will have to retrain deqbert some point in the future.

--- a/deq_tests.ipynb
+++ b/deq_tests.ipynb
@@ -1948,6 +1948,63 @@
    "source": [
     "print(prof.key_averages().table(sort_by=\"cpu_time_total\"))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# PUSHING THE MODEL TO HUGGINGFACE HUB"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at models/lucas-cont/checkpoint-5000 were not used when initializing DEQBertForMaskedLM: ['deqbert.encoder.layer.input_injection.weight', 'deqbert.encoder.layer.input_injection.bias']\n",
+      "- This IS expected if you are initializing DEQBertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DEQBertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute '_create_or_get_repo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 10>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      7\u001B[0m DEQBertForMaskedLM\u001B[38;5;241m.\u001B[39mregister_for_auto_class(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAutoModelForMaskedLM\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      9\u001B[0m DEQBertForMaskedLM\u001B[38;5;241m.\u001B[39mfrom_pretrained(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmodels/lucas-cont/checkpoint-5000\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m---> 10\u001B[0m \u001B[43mDEQBertForMaskedLM\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpush_to_hub\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mdeqbert-base\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\anaconda3\\envs\\implicit-bert\\lib\\site-packages\\transformers\\modeling_utils.py:2446\u001B[0m, in \u001B[0;36mPreTrainedModel.push_to_hub\u001B[1;34m(self, repo_path_or_name, repo_url, use_temp_dir, commit_message, organization, private, use_auth_token, max_shard_size, **model_card_kwargs)\u001B[0m\n\u001B[0;32m   2443\u001B[0m     repo_path_or_name \u001B[38;5;241m=\u001B[39m tempfile\u001B[38;5;241m.\u001B[39mmkdtemp()\n\u001B[0;32m   2445\u001B[0m \u001B[38;5;66;03m# Create or clone the repo. If the repo is already cloned, this just retrieves the path to the repo.\u001B[39;00m\n\u001B[1;32m-> 2446\u001B[0m repo \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_create_or_get_repo\u001B[49m(\n\u001B[0;32m   2447\u001B[0m     repo_path_or_name\u001B[38;5;241m=\u001B[39mrepo_path_or_name,\n\u001B[0;32m   2448\u001B[0m     repo_url\u001B[38;5;241m=\u001B[39mrepo_url,\n\u001B[0;32m   2449\u001B[0m     organization\u001B[38;5;241m=\u001B[39morganization,\n\u001B[0;32m   2450\u001B[0m     private\u001B[38;5;241m=\u001B[39mprivate,\n\u001B[0;32m   2451\u001B[0m     use_auth_token\u001B[38;5;241m=\u001B[39muse_auth_token,\n\u001B[0;32m   2452\u001B[0m )\n\u001B[0;32m   2453\u001B[0m \u001B[38;5;66;03m# Save the files in the cloned repo\u001B[39;00m\n\u001B[0;32m   2454\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msave_pretrained(repo_path_or_name, max_shard_size\u001B[38;5;241m=\u001B[39mmax_shard_size)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'str' object has no attribute '_create_or_get_repo'"
+     ]
+    }
+   ],
+   "source": [
+    "from DEQBert.configuration_deqbert import DEQBertConfig\n",
+    "from DEQBert.modeling_deqbert import DEQBertModel\n",
+    "from DEQBert.modeling_deqbert import DEQBertForMaskedLM\n",
+    "\n",
+    "DEQBertConfig.register_for_auto_class()\n",
+    "DEQBertModel.register_for_auto_class(\"AutoModel\")\n",
+    "DEQBertForMaskedLM.register_for_auto_class(\"AutoModelForMaskedLM\")\n",
+    "\n",
+    "deqbert = DEQBertForMaskedLM.from_pretrained(\"models/lucas-cont/checkpoint-5000\")\n",
+    "deqbert.push_to_hub(\"deqbert-base\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
